<resources>
    <string name="app_name">Chat App_#R</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_messaging">Start Messaging</string>
    <string name="terms_privacy_policy"><![CDATA[Terms & Privacy Policy]]></string>
    <string name="walkthourgh_text">Connect easily with your family and friends over countries</string>
    <string name="number_one">1</string>
    <string name="number_four">4</string>
    <string name="number_seven">7</string>
    <string name="number_two">2</string>
    <string name="number_five">5</string>
    <string name="number_eight">8</string>
    <string name="number_three">3</string>
    <string name="number_six">6</string>
    <string name="number_nine">9</string>
    <string name="number_zero">0</string>
    <string name="popbackstack">popBackStack</string>
    <string name="verification_title">Enter Your Phone Number</string>
    <string name="verification_subtitle">Please confirm your country code and enter your phone number</string>
    <string name="phone_number">Phone Number</string>
    <string name="verification_continue">Continue</string>
    <string name="number_code_uzb">+998</string>
</resources>