<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_alignParentBottom="true"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_one"
            style="@style/TextView_Keyboard"
            android:text="@string/number_one" />

        <TextView
            android:id="@+id/tv_four"
            style="@style/TextView_Keyboard"
            android:text="@string/number_four" />

        <TextView
            android:id="@+id/tv_seven"
            style="@style/TextView_Keyboard"
            android:text="@string/number_seven" />

        <TextView
            style="@style/TextView_Keyboard" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_two"
            style="@style/TextView_Keyboard"
            android:text="@string/number_two" />

        <TextView
            android:id="@+id/tv_five"
            style="@style/TextView_Keyboard"
            android:text="@string/number_five" />

        <TextView
            android:id="@+id/tv_eight"
            style="@style/TextView_Keyboard"
            android:text="@string/number_eight" />

        <TextView
            android:id="@+id/tv_zero"
            style="@style/TextView_Keyboard"
            android:text="@string/number_zero" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_three"
            style="@style/TextView_Keyboard"
            android:text="@string/number_three" />

        <TextView
            android:id="@+id/tv_six"
            style="@style/TextView_Keyboard"
            android:text="@string/number_six" />

        <TextView
            android:id="@+id/tv_nine"
            style="@style/TextView_Keyboard"
            android:text="@string/number_nine" />

        <ImageView
            android:id="@+id/iv_backspace"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingVertical="18dp"
            android:src="@drawable/ic_backspace"
            tools:ignore="ContentDescription,InefficientWeight,NestedWeights" />
    </LinearLayout>


</LinearLayout>